<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.onfido.qa</groupId>
    <artifactId>web-sdk-tests</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <WebTest.version>0.9.2-SNAPSHOT</WebTest.version>
        <forkCount>0</forkCount>
        <threadCount>5</threadCount>
        <kotlin.version>1.6.10</kotlin.version>
        <retrofit.version>2.9.0</retrofit.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <groups/>
        <excludeGroups />
    </properties>

    <profiles>
        <profile>
            <id>dd</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <dd.java.agent.arg>-javaagent:${settings.localRepository}/com/datadoghq/dd-java-agent/0.107.1/dd-java-agent-0.107.1.jar -Ddd.civisibility.enabled=true</dd.java.agent.arg>
                <forkCount>1</forkCount>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>com.datadoghq</groupId>
                    <artifactId>dd-java-agent</artifactId>
                    <version>0.107.1</version>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <!-- https://github.com/jcansdale-test/maven-consume -->
    <repositories>
        <repository>
            <id>github-public</id>
            <url>https://public:&#103;hp_ikHTOjIdGySy0JoNczPoYdanZp7Fqy0MiUIL@maven.pkg.github.com/it-ony/webtest</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.onfido.qa.webdriver</groupId>
            <artifactId>webtest</artifactId>
            <version>${WebTest.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.3.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>retrofit</artifactId>
            <version>${retrofit.version}</version>
        </dependency>

        <dependency>
            <groupId>com.squareup.retrofit2</groupId>
            <artifactId>converter-jackson</artifactId>
            <version>${retrofit.version}</version>
        </dependency>

        <dependency>
            <groupId>io.percy</groupId>
            <artifactId>percy-java-selenium</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.13.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.22.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.3.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <resources>
            <resource>
                <directory>../../src/locales</directory>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <source>11</source>
                    <encoding>UTF-8</encoding>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <properties>
                        <property>
                            <name>configfailurepolicy</name>
                            <value>continue</value>
                        </property>
                        <property>
                            <name>dataproviderthreadcount</name>
                            <value>${threadCount}</value>
                        </property>
                    </properties>
                    <groups>${groups}</groups>
                    <excludedGroups>${excludeGroups}</excludedGroups>
                    <useFile>false</useFile>
                    <trimStackTrace>false</trimStackTrace>
                    <disableXmlReport>false</disableXmlReport>
                    <reportsDirectory>target/surefire-reports</reportsDirectory>
                    <parallel>methods</parallel>
                    <threadCount>${threadCount}</threadCount>
                    <forkCount>${forkCount}</forkCount>
                    <argLine>${dd.java.agent.arg} --add-opens java.base/java.lang.invoke=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
